Name:    sustain
Version: 0.1

Synopsis: Apltly staging web helper
License:      PublicDomain
License-File: LICENSE

Cabal-Version: >= 1.8
Build-Type:    Simple

Executable sustain

  Ghc-options:    -Wall -O2 -threaded
  Hs-source-dirs: src
  Main-is:        Sustain.hs

  Extensions: TemplateHaskell
              QuasiQuotes
              OverloadedStrings
              NoImplicitPrelude
              CPP
              MultiParamTypeClasses
              TypeFamilies
              GADTs
              GeneralizedNewtypeDeriving
              FlexibleContexts
              FlexibleInstances
              TypeSynonymInstances
              EmptyDataDecls
              NoMonomorphismRestriction
              DeriveDataTypeable

  Build-depends: base                          >= 4          && < 5
               , process                       >= 1.0
               , yesod                         >= 1.2.5      && < 1.3
               , yesod-core                    >= 1.2.12     && < 1.3
               , yesod-auth                    >= 1.3        && < 1.4
               , yesod-static                  >= 1.2        && < 1.3
               , yesod-form                    >= 1.3        && < 1.4
               , bytestring                    >= 0.9        && < 0.11
               , transformers                  >= 0.3
               , LDAP                          >= 0.6.6
               , text                          >= 0.11       && < 2.0
               , blaze-markup                  >= 0.6
               , template-haskell
               , shakespeare                   >= 2.0        && < 2.1
               , hjsmin                        >= 0.1        && < 0.2
               , monad-control                 >= 0.3        && < 0.4
               , wai-extra                     >= 2.1        && < 2.2
               , http-conduit                  >= 2.1        && < 2.2
               , directory                     >= 1.1        && < 1.3
               , warp                          >= 2.1        && < 2.2
               , aeson                         >= 0.6        && < 0.8
               , yaml                          >= 0.8        && < 1.0
               , conduit                       >= 1.0        && < 2.0
