name:                sustain
version:             0.1
synopsis:            Aptly staging web helper
homepage:            https://github.com/keynslug/sustain
license:             PublicDomain
license-file:        LICENSE
author:              Keynslug
maintainer:          encube.ul@gmail.com
category:            Web
build-type:          Simple
cabal-version:       >= 1.10

library
  hs-source-dirs:      src
  exposed-modules:     Aptly.CLI
                     , Aptly.HttpAPI
                     , Package
                     , Version
  default-extensions:  OverloadedStrings
                     , ScopedTypeVariables
  build-depends:       base >= 4.7 && < 5
                     , text
                     , bytestring
                     , transformers
                     , mtl
                     , monad-control
                     , process
                     , lens
                     , http-client
                     , wreq
                     , aeson
  default-language:    Haskell2010

executable sustain-exe
  hs-source-dirs:      app
  main-is:             Sustain.hs
  other-modules:       Foundation
                     , Imports
                     , Layout
                     , Routes
                     , Settings
  ghc-options:         -Wall -O2 -threaded -rtsopts -with-rtsopts=-N
  default-extensions:  TemplateHaskell
                     , QuasiQuotes
                     , OverloadedStrings
                     , NoImplicitPrelude
                     , CPP
                     , MultiParamTypeClasses
                     , TypeFamilies
                     , GADTs
                     , GeneralizedNewtypeDeriving
                     , FlexibleContexts
                     , FlexibleInstances
                     , TypeSynonymInstances
                     , EmptyDataDecls
                     , NoMonomorphismRestriction
                     , DeriveDataTypeable
  build-depends:       base
                     , sustain
                     , mtl
                     , transformers
                     , monad-control
                     , text
                     , yesod
                     , yesod-core
                     , yesod-static
                     , yesod-form
                     , yesod-auth
                     , LDAP
                     , yesod-auth-ldap
                     , blaze-markup
                     , template-haskell
                     , shakespeare
                     , hjsmin
                     , wai-extra
                     , http-conduit
                     , directory
                     , warp
                     , aeson
                     , yaml
                     , conduit
                     , hdaemonize
  default-language:    Haskell2010

test-suite sustain-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , sustain
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/keynslug/sustain
